# deep-learning-audio

./: .dockerignore  .env.example  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .releaserc  .releaserc.json  .secrets.baseline  .test.env  .tflint.hcl  .tool-versions  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  commitlint.config.js  docker-compose.yaml  mypy.ini  pyproject.toml  release.config.js  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml  quality.yaml  release.yaml
configs/: train.yaml
configs/asr/: quartznet-one-batch.yaml  quartznet.yaml
configs/callbacks/: default.yaml  device_stats_monitor.yaml  early_stopping.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml  stochastic_weight_averaging.yaml
configs/core/: train.yaml
configs/core/callbacks/: default.yaml  device_stats_monitor.yaml  early_stopping.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  rich_model_summary.yaml  rich_progress_bar.yaml  stochastic_weight_averaging.yaml
configs/core/debug/: default.yaml  fdr.yaml  limit.yaml  overfit.yaml  profiler.yaml
configs/core/loggers/: default.yaml  wandb.yaml
configs/core/trainer/: cpu.yaml  default.yaml  gpu.yaml  gpu_ddp.yaml
configs/core/tuner/: default.yaml
configs/data/audio/: asr.yaml
configs/experiment/: example.yaml
configs/experiments/: asr.yaml  asr_overfit.yaml
configs/experiments/data/audio/: asr.yaml
configs/experiments/models/audio/asr/: quartznet.yaml
configs/loggers/: default.yaml  ml_flow.yaml  wandb.yaml
configs/model/audio/asr/: quartznet.yaml
configs/trainer/: default.yaml  gpu.yaml  gpu_ddp.yaml  gpu_ddp_simulation.yaml
configs/tuner/: default.yaml
infrastructure/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
infrastructure/modules/grafana/: README.md  cloud.tf  dashboards.tf  outputs.tf  terrafrom.tf  variables.tf
infrastructure/modules/grafana/config/dashboards/k8s/: global.json  namespaces.json  nodes.json  pods.json
infrastructure/modules/k3s/: .terraform.lock.hcl  README.md  agents.tf  main.tf  outputs.tf  servers.tf  tailscale.tf  terraform.tf  variables.tf
infrastructure/modules/k3s/config/tailscale/: acl.jsonc.tpl
infrastructure/modules/k3s/scripts/: k3s_agent_install.sh.tpl  k3s_delete_node.sh.tpl  k3s_server_install.sh.tpl  tailscale_activate.sh.tpl  temp
infrastructure/modules/k8s/monitoring/: .terraform.lock.hcl  main.tf  terraform.tf  variables.tf
infrastructure/modules/k8s/monitoring/config/: k8s_monitoring.yaml.tpl
infrastructure/modules/tailscale/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
infrastructure/modules/tailscale/config/tailscale/: acl.jsonc
notebooks/: white.mplstyle
notebooks/audio/: dsp.ipynb
notebooks/dsp/: dsp.ipynb
resources/datasets/asr/: .gitignore  libri_speech.dvc  lj_speech.dvc
scripts/: datasets.sh  user_data_linux.sh  user_data_linux.tpl  user_data_ubuntu.sh
src/: __init__.py  __main__.py  cfg.py
src/collections/asr/: __init__.py  test.py  train.py
src/collections/asr/metrics/: __init__.py
src/collections/asr/models/: __init__.py  quartznet.py
src/collections/audio/asr/: data.py  model.py
src/collections/audio/asr/datasets/: __init__.py  base.py  libri.py  lj.py
src/collections/audio/asr/metrics/: __init__.py
src/collections/audio/asr/models/: __init__.py  quartznet.py
src/collections/audio/dsp/: __init__.py  audio.py  augmentation.py  transformations.py
src/collections/common/: __init__.py  tokenizers.py
src/collections/common/preprocessing/: text.py  tokenizers.py
src/configs/: train.yaml
src/configs/callback/: default.yaml
src/configs/data/: audio_asr.yaml
src/configs/logger/: default.yaml
src/configs/trainer/: cpu.yaml  gpu.yaml  gpu_ddp.yaml
src/configs/tuner/: default.yaml
src/core/asr/: README.md  __main__.py  inference.py  train.py
src/core/asr/loss/: __init__.py
src/core/asr/metrics/: __init__.py
src/core/asr/models/: hubert.py  quartznet.py
src/core/asr/trainer/: __init__.py
src/core/datasets/: __init__.py
src/core/optim/: __init__.py
src/core/optim/lr_schedulers/: __init__.py  cosine_annealing_warmup.py  warmup.py
src/core/optim/optimizers/: __init__.py  novograd.py
src/core/utils/: __init__.py
src/core/utils/dataloaders/: __init__.py  collater.py
src/core/utils/optim/: optimizers.py  schedulers.py
src/data/audio/: __init__.py  augmentation.py
src/data/dataloaders/: __init__.py  collater.py
src/data/datasets/: __init__.py  asr.py
src/data/preprocess/: __init__.py
src/data/preprocess/audio/: __init__.py  augmentation.py
src/data/preprocess/text/: __init__.py
src/data/preprocess/transform/: __init__.py  augmentation.py
src/data/preprocessing/audio/: __init__.py  augmentation.py
src/data/preprocessing/text/: __init__.py
src/data/preprocessing/transform/: __init__.py
src/data/transforms/: __init__.py  augmentation.py
src/domains/: __init__.py
src/domains/audio/: __init__.py
src/domains/audio/asr/: data.py  model.py
src/domains/audio/asr/datasets/: __init__.py  base.py  libri.py  lj.py
src/domains/audio/asr/models/: quartznet.py
src/domains/audio/dsp/: augmentation.py
src/domains/common/: __init__.py
src/domains/common/preprocessing/: __init__.py  text.py  tokenizers.py
src/logging/: __init__.py  wandb.py
src/metrics/: __init__.py  asr.py
src/tasks/asr/: inference.py  train.py
src/tasks/asr/models/: __init__.py  hubert.py  quartznet.py
src/tasks/asr/trainer/: __init__.py
src/utils/: __init__.py  env.py  logger.py  train.py
src/utils/loggers/: __init__.py
src/utils/loggers/wandb/: __init__.py  asr.py
src/utils/vizualization/: __init__.py  audio.py
src/visualization/: __init__.py
terraform/: .terraform.docs.yaml  .tflint.hcl  ec2.tf  main.tf  network.tf  outputs.tf  s3.tf  security.tf  variables.tf  versions.tf
tests/collections/audio/dsp/: audio_test.py  augmentation_test.py  test_audio.py  test_augmentation.py
tests/collections/common/preprocessing/: tokenizers_test.py
(+1 files in other folders)
