[tool.poetry]
authors = ["Gleb Khaykin <khaykingleb@gmail.com>"]
version = "0.14.9"
name = "deep-learning-for-audio"
description = "Neural networks used for digital signal processing, speech analysis, and speech synthesis."
repository = "https://github.com/khaykingleb/Deep-Learning-for-Audio"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^1.12.0"
torchaudio = "^0.12.0"
librosa = "^0.9.2"
SoundFile = "^0.10.3"
torch-optimizer = "^0.3.0"
wandb = "^0.12.21"
click = "^8.1.3"
matplotlib = "^3.5.3"
pandas = "^1.4.4"
omegaconf = "^2.2.3"
tqdm = "^4.64.1"
rich = "^12.5.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
commitizen = "^2.29.2"
pre-commit = "^2.20.0"
detect-secrets = "^1.3.0"
dvc = "^2.18.1"
dvc-s3 = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[tool.poetry.group.research.dependencies]
ipykernel = "^6.15.2"
ipywidgets = "^8.0.2"
jupyterlab = "^3.4.6"

[tool.black]
line-length = 100
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
src_paths = ["src", "tests"]
profile = "black"
line_length = 100
multi_line_output = 3
order_by_type = true
reverse_relative = true
from_first = false

[tool.semantic_release]
version_variable = [
  "pyproject.toml:version",
  "src/__init__.py:__version__"
]
version_pattern = [
  "Makefile:^VERSION := {version}"
]
upload_to_pypi = false
upload_to_release = false
commit_subject = "chore(release): v{version} [skip ci]"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
